@@ -1,3 +1,8 @@
+2021-01-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/tinytest.R: Also test for CODECOV when deciding to run
+	extensive tests or just a subset
+
 2021-01-14  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Date, Version): Release 1.0.6
